<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/thisAppBasicBG"
    tools:context=".activities.MenuActivity"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:id="@+id/menu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/menu_choose_category"
                android:textAlignment="center"
                android:textColor="@color/thisAPpBasicText"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="4"
                android:foregroundGravity="center"
                app:layout_constraintTop_toBottomOf="@+id/menu_title">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/first_line"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:weightSum="2">

                        <Button
                            android:id="@+id/mass"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:onClick="ButtonPressed"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/menu_mass" />

                        <Button
                            android:id="@+id/length"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:onClick="ButtonPressed"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/menu_length" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/second_line"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:weightSum="2"
                        app:layout_constraintTop_toBottomOf="@+id/first_line">

                        <Button
                            android:id="@+id/currency"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:onClick="ButtonPressed"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/menu_currency" />

                        <Button
                            android:id="@+id/temperature"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:onClick="ButtonPressed"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/menu_temp" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <FrameLayout
                android:id="@+id/basic_fragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollView"></FrameLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>

